cmss/main/default/objects/LoanSurchargeDiscount__c/LoanSurchargeDiscount__c.object-meta.xml
<CustomObject>
    <description>Přirážky a slevy u smlouvy - pro úvěrový případ a meziúvěr</description>
    <label>Loan Surcharge Discount</label>
    <nameField>
        <label>Loan Surcharge Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Surcharge Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>