cmss/main/default/objects/LoanSurchargeDiscount__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Odkaz na smlouvu</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Loan Surcharge Discounts</relationshipLabel>
    <relationshipName>Loan_Surcharge_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>