cmss/main/default/objects/LoanSurchargeDiscount__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <description>Datum storna</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>