cmss/main/default/objects/LoanSurchargeDiscount__c/fields/CsProductNumber__c.field-meta.xml
<CustomField>
    <fullName>CsProductNumber__c</fullName>
    <description>Číslo cross-sell produktu</description>
    <label>CS Product Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>