cmss/main/default/objects/LoanSurchargeDiscount__c/fields/LoanCaseId__c.field-meta.xml
<CustomField>
    <fullName>LoanCaseId__c</fullName>
    <description>Číslo úvěrového případu</description>
    <label>Loan Case Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>