cmss/main/default/objects/LoanSurchargeDiscount__c/fields/LoanRelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>LoanRelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Klient</description>
    <label>Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Surcharge Discounts</relationshipLabel>
    <relationshipName>Loan_Surcharge_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>