cmss/main/default/objects/LoanSurchargeDiscount__c/fields/SurchargeDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>SurchargeDiscountAmount__c</fullName>
    <description>Výše přirážky / slevy</description>
    <label>Surcharge Discount Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>