cmss/main/default/objects/LoanSurchargeDiscount__c/fields/SurchargeDiscountId__c.field-meta.xml
<CustomField>
    <fullName>SurchargeDiscountId__c</fullName>
    <description>Kód slevy</description>
    <label>Surcharge Discount Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>