cmss/main/default/objects/LoanSurchargeDiscount__c/fields/SurchargeDiscountName__c.field-meta.xml
<CustomField>
    <fullName>SurchargeDiscountName__c</fullName>
    <description>Název slevy</description>
    <label>Surcharge Discount Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>